--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,17 +8,17 @@
 
 @media screen and (max-width: 1023px) {
   .footer {
-    padding-top: 88px;
-    padding-right: 24px;
-    padding-left: 24px;
+    margin-top: 88px;
+    margin-right: 24px;
+    margin-left: 24px;
   }
 }
 
 @media screen and (max-width: 722px) {
   .footer {
-    padding-top: 64px;
-    padding-right: 16px;
-    padding-left: 16px;
+    margin-top: 64px;
+    margin-right: 16px;
+    margin-left: 16px;
     flex-direction: column;
   }
 }
