--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -9,24 +9,24 @@
 
 @media screen and (max-width: 1279px) {
   .intro {
-    padding-right: 48px;
-    padding-left: 48px;
+    margin-right: 48px;
+    margin-left: 48px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .intro {
     max-width: 720px;
-    padding-top: 88px;
-    padding-right: 24px;
-    padding-left: 24px;
+    margin-top: 88px;
+    margin-right: 24px;
+    margin-left: 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .intro {
-    padding-top: 64px;
-    padding-right: 16px;
-    padding-left: 16px;
+    margin-top: 64px;
+    margin-right: 16px;
+    margin-left: 16px;
   }
 }
