--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,6 @@
 .lead__image {
-  max-width: 100%;
+  max-width: 984px;
+  width: 100%;
   margin: 0 0 8px;
   display: block;
   object-fit: cover;
