--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,13 +5,13 @@
 
 @media screen and (max-width: 1279px) {
   .lead {
-    padding: 48px 48px 0;
+    margin: 48px 48px 0;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lead {
-    padding-right: 0;
-    padding-left: 0;
+    margin-right: 0;
+    margin-left: 0;
   }
 }
