--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -15,17 +15,17 @@
 @media screen and (max-width: 1023px) {
   .photo-grid {
     gap: 16px;
-    padding-top: 88px;
-    padding-right: 24px;
-    padding-left: 24px;
+    margin-top: 88px;
+    margin-right: 24px;
+    margin-left: 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .photo-grid {
     gap: 12px;
-    padding-top: 64px;
-    padding-right: 16px;
-    padding-left: 16px;
+    margin-top: 64px;
+    margin-right: 16px;
+    margin-left: 16px;
   }
 }
