--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,23 +5,23 @@
 
 @media screen and (max-width: 1279px) {
   .places {
-    padding-right: 48px;
-    padding-left: 48px;
+    margin-right: 48px;
+    margin-left: 48px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .places {
-    padding-top: 88px;
-    padding-right: 24px;
-    padding-left: 24px;
+    margin-top: 88px;
+    margin-right: 24px;
+    margin-left: 24px;
   }
 }
 
 @media screen and (max-width: 680px) {
   .places {
-    padding-top: 64px;
-    padding-right: 0;
-    padding-left: 0;
+    margin-top: 64px;
+    margin-right: 0;
+    margin-left: 0;
   }
 }
