--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -3,14 +3,14 @@
   padding: 0;
   list-style-type: none;
   display: grid;
-  grid-template-columns: repeat(5, minmax(min-content, max-content));
+  grid-auto-flow: column;
   grid-column-gap: 18px;
 }
 
 @media screen and (max-width: 722px) {
   .footer__links {
     grid-template-columns: minmax(min-content, max-content);
-    grid-template-rows: repeat(5, minmax(min-content, max-content));
+    grid-auto-flow: row;
     grid-row-gap: calc(32px - 16 * ((100vw - 320px) / (1280 - 320)));
   }
 }
