--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,15 +1,8 @@
 .header__lang-links {
-  max-width: 77px;
-  width: 100%;
+  display: flex;
+  align-self: flex-end;
+  column-gap: 18px;
   list-style-type: none;
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 767px) {
-  .header__lang-links {
-    max-width: 62px;
-  }
 }
