--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,17 +3,24 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1024px) {
+  .header {
+    padding-right: 48px;
+    padding-left: 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .header {
     padding-right: 24px;
     padding-left: 24px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 320px) {
   .header {
     padding-right: 16px;
     padding-left: 16px;
