--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,24 +6,34 @@
   gap: 16px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1280px) {
   .photo-grid {
+    margin-right: 48px;
+    margin-left: 48px;
     gap: 14px;
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1024px) {
   .photo-grid {
     gap: 16px;
+    margin-top: 92px;
+    margin-right: 48px;
+    margin-left: 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    gap: 12px;
     margin-top: 88px;
     margin-right: 24px;
     margin-left: 24px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 320px) {
   .photo-grid {
-    gap: 12px;
     margin-top: 64px;
     margin-right: 16px;
     margin-left: 16px;
