--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,10 +1,12 @@
 .place__url-heading {
-  margin: 0 0 5px;
+  margin: 0 0 12px 0;
+  padding: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.7;
+  line-height: 12px;
   letter-spacing: 2px;
+  text-transform: uppercase;
   color: #aaa;
 }
 
