--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -16,15 +16,14 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    margin-top: 88px;
     margin-right: 24px;
     margin-left: 24px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 320px), (max-width: 722px) {
   .footer {
-    margin-top: 48px;
+    margin-top: 64px;
     margin-right: 16px;
     margin-left: 16px;
     flex-direction: column;
