--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -20,6 +20,11 @@
 @media screen and (max-width: 1024px) {
   .place__paragraph {
     margin-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
     font-size: 16px;
   }
 }
