--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,28 +1,23 @@
 .header {
   max-width: 1184px;
   margin: 0 auto;
+  padding: 0 48px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-@media screen and (max-width: 1024px) {
-  .header {
-    padding-right: 48px;
-    padding-left: 48px;
-  }
-}
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .header {
     padding-right: 24px;
     padding-left: 24px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .header {
     padding-right: 16px;
     padding-left: 16px;
   }
 }
+
