--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,7 +4,7 @@
   margin: 0 0 80px;
   display: grid;
   grid-template-rows: minmax(min-content, max-content) 1fr;
-  grid-template-columns: calc(440px + 20 * ((100vw - 1024px) / (1280 - 1024))) 1fr;
+  grid-template-columns: repeat(2, fit-content(460px));
   column-gap: 40px;
   row-gap: 48px;
   grid-template-areas:
@@ -19,6 +19,7 @@
 @media screen and (max-width: 1279px) {
   .place {
     column-gap: 32px;
+    grid-template-columns: calc(440px + 20 * ((100vw - 1024px) / (1280 - 1024))) 1fr;
   }
 }
 
